# KomicsReader

./: README.md  buildNrun.sh
src/: CMakeLists.txt  directory.cpp  directory.h  extractor.cpp  extractor.h  fileinfo.cpp  fileinfo.h  karchive.cpp  karchive.h  launcher.h  main.cpp
src/contents/ui/: main.qml
